# web_content_processor

./: README.md  config.json  pyproject.toml  requirements.txt
tests/: test_web_content_processor.py
web_content_processor/: .WebContentProcessor.py.swp  WebContentProcessor.py  __init__.py
