[project]
name = "web_content_processor_pkg"
version = "0.1.0"
description = "A web content processor package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "oauth2",
    "pdfrw",
    "textract",
    "pypandoc",
    "beautifulsoup4",
    "html2text",
    "pytidylib",
    "requests",
    "readability-lxml",
    "argparse",
    "socialModules",
    "pytest",
    "six",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_content_processor_pkg*"]

[tool.pytest.ini_options]
pythonpath = ["."]
