[project]
name = "web_content_processor"
version = "0.1.0"
description = "A web content processor package"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "oauth2",
    "pdfrw",
    "textract",
    "pypandoc",
    "beautifulsoup4",
    "html2text",
    "pytidylib",
    "requests",
    "readability-lxml",
    "six",
    "socialmodules @ git+https://git@github.com/fernand0/socialModules.git@errbot",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_content_processor*"]

[tool.pytest.ini_options]
pythonpath = ["."]
